no more foreground highliting on rollover

--- a/theme/nimble/style/core.css
+++ b/theme/nimble/style/core.css
@@ -17,6 +17,8 @@ h1,h2,h3,h4,h5,h6 {
 	margin: 0 auto;
 }
 
+.sitetopic .section .activity:hover,
+.course-content .section .activity:hover { background: none;}
 
 /* Header */
 
